--- a/semana 10/style.css
+++ b/semana 10/style.css
@@ -1,19 +1,36 @@
 html,
 body {
-  font-family: 'Roboto', sans-serif;
-  color: #404040;
-  background-color: #eee;
+  font-family: 'Roboto', sans-serif !important;
+  color: #fff;
+  background-color: #fff;
+
+
+  
+}
+.margen {
+
+margin-top: 30px;
+}
+
 }
 
 .container {
-  width: 420px;
+  width: 520px;
   margin-top: 20px;
+}
+
+.form-group {
+  margin-top: 5%;
 }
 
 .button-group {
   margin-bottom: 20px;
 }
-
+.btn-primary{
+    color: #fff;
+    background-color: #F3C40C !important;
+    border-color: #F3C40C;
+  }
 .counter {
   display: inline;
   margin-top: 0;
@@ -22,6 +39,8 @@ body {
 }
 
 .posts {
+  color: #fff !important;
+
   clear: both;
   list-style: none;
   padding-left: 0;
@@ -29,8 +48,9 @@ body {
 }
 
 .posts li {
-  background-color: #fff;
-  border: 1px solid #d8d8d8;
+
+      background-color:#F3C40C;
+    border: 1px solid rgba(21, 7, 7, 0);
   padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
@@ -38,4 +58,9 @@ body {
   margin-bottom: 10px;
   word-wrap: break-word;
   min-height: 42px;
+}
+
+.selected {
+  background-color: gray;
+  
 }
